@@ -9,6 +9,9 @@
           stuff from Node.  This functionality is now provided by the
           relocate/do_relocate methods.
 
+        * src/openvrml/OpenVRML/script.cpp:  Fixed bug in ScriptNode
+          shutdown.
+
 2003-02-23  Braden McDaniel  <braden@endoframe.com>
 
         * src/openvrml/OpenVRML/browser.cpp,
